src/asg/auto scaling group/sg.yml
AWSTemplateFormatVersion:            2010-09-09

Description:                         intantiate security groups

Resources:
  EC2SecurityGroup:
    Type:                            AWS::EC2::SecurityGroup
    Properties:
      GroupDescription:              for ec2 instance
      SecurityGroupIngress:
        - SourceSecurityGroupId:     !GetAtt InternetFacingALBSecurityGroup.GroupId
          IpProtocol:                tcp
          FromPort:                  8080
          ToPort:                    8080
        - CidrIp:                    45.112.187.9/32
          IpProtocol:                tcp
          FromPort:                  22
          ToPort:                    22
  InternetFacingALBSecurityGroup:
    Type:                            AWS::EC2::SecurityGroup
    Properties:
      GroupDescription:              for internet facing load balancer
      SecurityGroupIngress:
        - CidrIp:                    0.0.0.0/0
          IpProtocol:                tcp
          FromPort:                  80
          ToPort:                    80

Outputs:
  EC2SecurityGroupId:
    Description:                     ec2 security group
    Value:                           !GetAtt EC2SecurityGroup.GroupId
    Export:
      Name:                          !Sub ${AWS::StackName}::EC2SecurityGroupId
  InternetFacingALBSecurityGroupId:
    Description:                     internet facing load balancer security group
    Value:                           !GetAtt InternetFacingALBSecurityGroup.GroupId
    Export:
      Name:                          !Sub ${AWS::StackName}::InternetFacingALBSecurityGroupId
